[metadata]
name = viewland
version = 0.0.1
author = Yuchen Wu (Andy)
author_email = author@example.com
description = A package for visualising energy landscape data.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/andywuy/landscape_visualiser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
include_package_data = true
packages = find:
python_requires = >=3.6

